# aiassistantwithtracing

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  samconfig.toml  template.yaml
agentstudio/: .gitignore  Dockerfile  README.md  langgraph.json  main(moved).py  main.py  pyproject.toml  requirements.txt
agentstudio/src/agent/: graph.py  userprofileretriever.py
agentstudio/src/assistant/: assistant.py
agentstudio/src/calculator/: __init__.py  graph.py
agentstudio/src/calendar/: __init__.py  graph.py
agentstudio/src/services/: rag_chain.py  vector_store_local.py
agentstudio/src/tools/: insert.py  rag_tool.py  search_tool.py  test.py
agentstudio/tests/integration_tests/: test_graph.py
agentstudio/tests/unit_tests/: test_configuration.py
evaluation/: evaluator_script.py  evaluator_script_llm.py  tool_selection_test_set.csv
llmpipeline/: .gitignore  pyproject.toml  requirements.txt
llmpipeline/chroma_db/: chroma.sqlite3
llmpipeline/scripts/: test_api.py
llmpipeline/src/: main.py
llmpipeline/src/config/: config.py
rag_core/: pyproject.toml  rag_chain.py  vector_store_local.py
rag_service/: main.py  pyproject.toml
rag_service/routes/: ingest.py  query.py
ragcorelib/: __init__.py  pyproject.toml  rag_chain.py  vector_store_aws.py  vector_store_local.py
ragservice/: .gitignore  Dockerfile  main.py  pyproject.toml
ragservice/routes/: ingest.py
scripts/: test_api.py
src/: main.py
src/config/: config.py
src/ingest/: app.py
src/langchainapp/routes/: ingest.py  query.py
src/langchainapp/services/: rag_chain.py  vector_store_aws.py  vector_store_local.py
src/query/: app.py
src/services/: rag_chain.py  vector_store_local.py
src/shared/: requirements.txt
src/shared/python/: config.py  rag_chain.py  vector_store.py  vector_store_local.py
sts_client/: main.py
stsservice/: Dockerfile  main.py  pyproject.toml  sst_stream.py
(+9 files in other folders)
