[project]
name = "ragcorelib"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.1",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langsmith>=0.1.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["ragcorelib*"]