[project]
name = "rag-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "langchain-text-splitters>=0.3.0",
    "langsmith>=0.1.0",
    "ragcorelib",
]

[tool.uv.sources]
ragcorelib = { path = "../ragcorelib" }

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
